--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ejs test</title>
-</head>
-<body>
-    <h1> It's a <%= kindOfDay %>   </h1>
-    
-    
-</body>
+  </head>
+  <body>
+    <h1 style="color: purple"><%= kindOfDay %> </h1>
+    <ul>
+      
+
+      <% for (var i =0; i<newListItems.length; i++ ) { %>
+      <li> <%= newListItems[i] %> </li>
+
+      <% } %>
+    </ul>
+
+    <form action="/" method="post">
+      <input type="text" name="newItem" />
+      <button type="submit" name="button">Submit</button>
+    </form>
+  </body>
 </html>
