--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,22 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ejs test</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>To do list app</title>
   </head>
   <body>
-    <h1 style="color: purple"><%= kindOfDay %> </h1>
-    <ul>
-      
+        <div class="box" id="heading">
+            <h1> <%= kindOfDay %> </h1>
+        </div>
+        
+        <div class="box">
+            
+                <% for (var i =0; i<newListItems.length; i++ ) { %>
+                <div class="item">
+                    <input type="checkbox">
+                    <p> <%= newListItems[i] %> </p>       
+                </div> <% } %>
 
-      <% for (var i =0; i<newListItems.length; i++ ) { %>
-      <li> <%= newListItems[i] %> </li>
-
-      <% } %>
-    </ul>
-
-    <form action="/" method="post">
-      <input type="text" name="newItem" />
-      <button type="submit" name="button">Submit</button>
-    </form>
+                <form class="item" action="/" method="post">
+                    <input type="text" name="newItem" placeholder="Add new item" autocomplete="off"/>
+                    <button type="submit" name="button">+</button>
+                </form>
+        </div>    
   </body>
 </html>
