--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css">
-    <title>To do list app</title>
-  </head>
-  <body>
+<%- include("header") -%>
+
+
         <div class="box" id="heading">
-            <h1> <%= kindOfDay %> </h1>
+            <h1> <%= listTitle %> </h1>
         </div>
         
         <div class="box">
@@ -21,9 +14,10 @@
                 </div> <% } %>
 
                 <form class="item" action="/" method="post">
-                    <input type="text" name="newItem" placeholder="Add new item" autocomplete="off"/>
-                    <button type="submit" name="button">+</button>
+                    <input type="text" name="newItem" placeholder="Add new item" />
+                    <button type="submit" name="list" value= <%= listTitle %> >+</button>
                 </form>
         </div>    
-  </body>
-</html>
+  
+<%- include("footer") -%>
+
