--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,12 +6,12 @@
         </div>
         
         <div class="box">
-            
-                <% for (var i =0; i<newListItems.length; i++ ) { %>
-                <div class="item">
-                    <input type="checkbox">
-                    <p> <%= newListItems[i] %> </p>       
-                </div> <% } %>
+                <% newListItems.forEach(function(item) {  %>
+                    <div class="item">
+                        <input type="checkbox">
+                        <p> <%= item.name %> </p>       
+                    </div>       
+                <% })  %>
 
                 <form class="item" action="/" method="post">
                     <input type="text" name="newItem" placeholder="Add new item" />
