--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,20 +6,21 @@
         </div>
         
         <div class="box">
-            
-            <form action="/delete" method="post">
-                <% newListItems.forEach(function(item) {  %>  <!-- passing over an array of mongo documents -->
-                    <div class="item">
-                        <input type="checkbox" name= "checkbox" value="<%=item._id%>" onChange= "this.form.submit()">   <!-- since this element doesn't have a submit type, I add the onChange wich will take the current form that this input is inside and it's goint to submit it to make the post request to delete route every time the input changes. In additon I have to add a name to get access to the input-->
-                        <p> <%= item.name %> </p>       
-                    </div>      
-                    <input type="hidden" name="listName" value="<%=listTitle%> "></input> 
-                <% })  %>
-            </form>
-                
+
+
+            <%  newListItems.forEach(function(item){ %>
+          
+              <form action="/delete" method="post">
+                <div class="item">
+                  <input type="checkbox" name="checkbox" value="<%=item._id%>" onChange="this.form.submit()">
+                  <p><%=item.name%></p>
+                </div>
+                <input type="hidden" name="listName" value="<%= listTitle %>"></input>
+              </form>
+            <%  }) %>
                 
                 <form class="item" action="/" method="post">
-                    <input type="text" name="newItem" placeholder="Add new item" />
+                    <input type="text" name="newItem" placeholder="Adicionar nova tarefa" />
                     <button type="submit" name="list" value= <%=listTitle%> >+</button>
                 </form>
         </div>    
